--- a/exhibitions.html
+++ b/exhibitions.html
@@ -121,9 +121,7 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html" class="purple-box"
-              >EXHIBITIONS</a
-            >
+            <a href="exhibitions.html" class="purple-box">EXHIBITIONS</a>
             <div class="dropdown-info">
               <p class="header">Our Exhibition Spaces Include:</p>
               <p>
@@ -147,7 +145,7 @@
           </li>
 
           <li>
-            <a href="get_involved.html" class="purple-box inactive" 
+            <a href="get_involved.html" class="purple-box inactive"
               >GET INVOLVED</a
             >
             <div class="dropdown-info">
@@ -178,143 +176,149 @@
     <main>
       <div class="main-wrapper">
         <h1 class="mobile">Exhibitions</h1>
-        <h1 class="large-screen">
-          Our Exhibits are Divided Into 5 Spaces
-          </h1>
+        <h1 class="large-screen">Our Exhibits are Divided Into 5 Spaces</h1>
         <section class="main-content">
           <div class="card-wrapper">
-          <div class="card">
-            <h2 id="cosmology">COSMOLOGY</h2>  
-            <div class="cosmology background">         
-              <p>
-                Explore the wonders of our cosmos. Our fantastic exhibition,
-                ‘The Sky Above Us’, explores the night sky and what we can see
-                and know about the universe around us. We’ll locate the various
-                constellations and galaxies that can be seen and learn a bit
-                about the early navigators who used the stars to travel by.
-              </p>
-              <p>
-                Follow the journey of our solar exploration: from early Arab
-                traders, to Galileo’s telescope, to the latest exploration of
-                the planets in our solar system.
-              </p>
-            </div> 
-          </div>
-          <span class="fa fa-arrow-circle-right purple"></span>
-          <span class="fa fa-arrow-circle-down purple"></span>
-          <figure class="card">
-            <img src="images\cosmology.jpg" alt="" />
-          </figure>
-          <figure class="card-large">
-            <img src="images\cosmology_large.jpg" alt="" />
-          </figure>
-        </div>
-        <div class="card-wrapper">
-          <div class="card reverse">
-            <h2 id="evolution">EVOLUTION</h2>   
-            <div class="evolution background">        
-              <p>
-                For centuries, philosophers and scientists have wrestled with
-                the question of our origins. Where do we come from and how did
-                we get here? Since Darwin proposed his theory of evolution we
-                have had a framework for exploring and understanding our place
-                in this world.
-              </p>
-              <p>
-                Discover the origins of life on this planet and how the species
-                we know today have evolved our time. You can also meet a few of the creatures who didn’t survive, including our
-                Woolly Mammoth, the Dodos, and a number of dinosaurs too.
-              </p>
+            <div class="card">
+              <h2 id="cosmology">COSMOLOGY</h2>
+              <div class="cosmology background">
+                <p>
+                  Explore the wonders of our cosmos. Our fantastic exhibition,
+                  ‘The Sky Above Us’, explores the night sky and what we can see
+                  and know about the universe around us. We’ll locate the
+                  various constellations and galaxies that can be seen and learn
+                  a bit about the early navigators who used the stars to travel
+                  by.
+                </p>
+                <p>
+                  Follow the journey of our solar exploration: from early Arab
+                  traders, to Galileo’s telescope, to the latest exploration of
+                  the planets in our solar system.
+                </p>
               </div>
+            </div>
+            <span class="fa fa-arrow-circle-right purple"></span>
+            <span class="fa fa-arrow-circle-down purple"></span>
+            <figure class="card">
+              <img src="images\cosmology.jpg" alt="" />
+            </figure>
+            <figure class="card-large">
+              <img src="images\cosmology_large.jpg" alt="" />
+            </figure>
           </div>
-          <span class="fa fa-arrow-circle-left blue reverse"></span>
-          <span class="fa fa-arrow-circle-down blue"></span>
-          <figure class="card">
-            <img src="images\evolution.jpg" alt="" />
-          </figure>
-          <figure class="card-large reverse">
-            <img src="images\evolution_large.jpg" alt="" />
-          </figure>
-        </div>
           <div class="card-wrapper">
-          <div class="card">
-            <h2 id="biology">BIOLOGY & MEDICINE</h2>
-            <div class="biology background">  
-              <p>
-                From micro-organisms to the human body, major breakthroughs in
-                biology are offering us unique insights into the great wonders
-                of the tiny world.
-              </p>
-              <p>
-                For many people their life expectancy is much longer and their
-                quality of life much improved, thanks to the growth of our
-                understanding of medicine. Over a series of exhibits we explore
-                the history of medicine and take a look at some major
-                breakthroughs including the discovery of penicillin and the
-                first heart transplant.
-              </p> 
+            <div class="card reverse">
+              <h2 id="evolution">EVOLUTION</h2>
+              <div class="evolution background">
+                <p>
+                  For centuries, philosophers and scientists have wrestled with
+                  the question of our origins. Where do we come from and how did
+                  we get here? Since Darwin proposed his theory of evolution we
+                  have had a framework for exploring and understanding our place
+                  in this world.
+                </p>
+                <p>
+                  Discover the origins of life on this planet and how the
+                  species we know today have evolved our time. You can also meet
+                  a few of the creatures who didn’t survive, including our
+                  Woolly Mammoth, the Dodos, and a number of dinosaurs too.
+                </p>
               </div>
+            </div>
+            <span class="fa fa-arrow-circle-left blue reverse"></span>
+            <span class="fa fa-arrow-circle-down blue"></span>
+            <figure class="card">
+              <img src="images\evolution.jpg" alt="" />
+            </figure>
+            <figure class="card-large reverse">
+              <img src="images\evolution_large.jpg" alt="" />
+            </figure>
           </div>
-          <span class="fa fa-arrow-circle-right dark-green"></span>
-          <span class="fa fa-arrow-circle-down dark-green"></span>
-          <figure class="card"><img src="images\biology.jpg" alt="" /></figure>
-          <figure class="card-large">
-            <img src="images\biology_large.jpg" alt="" />
-          </figure>
-        </div>
           <div class="card-wrapper">
-          <div class="card reverse">
-            <h2 id="robotics">ROBOTICS & AI</h2>
-            <div class="robotics background">  
-              <p>
-                The information revolution is here and robotics and artificial
-                intelligence are the science of the future.
-              </p>
-              <p>
-                From useful home applications of AI to industrial uses of
-                robotics, the future is here. You can even say hello and shake
-                the hand of Rob the Robot.
-              </p>
+            <div class="card">
+              <h2 id="biology">BIOLOGY & MEDICINE</h2>
+              <div class="biology background">
+                <p>
+                  From micro-organisms to the human body, major breakthroughs in
+                  biology are offering us unique insights into the great wonders
+                  of the tiny world.
+                </p>
+                <p>
+                  For many people their life expectancy is much longer and their
+                  quality of life much improved, thanks to the growth of our
+                  understanding of medicine. Over a series of exhibits we
+                  explore the history of medicine and take a look at some major
+                  breakthroughs including the discovery of penicillin and the
+                  first heart transplant.
+                </p>
               </div>
+            </div>
+            <span class="fa fa-arrow-circle-right dark-green"></span>
+            <span class="fa fa-arrow-circle-down dark-green"></span>
+            <figure class="card">
+              <img src="images\biology.jpg" alt="" />
+            </figure>
+            <figure class="card-large">
+              <img src="images\biology_large.jpg" alt="" />
+            </figure>
           </div>
-          <span class="fa fa-arrow-circle-left orange reverse"></span>
-          <span class="fa fa-arrow-circle-down orange"></span>
-          <figure class="card"><img src="images\robotics.jpg" alt="" /></figure>
-          <figure class="card-large reverse">
-            <img src="images\robotics_large.jpg" alt="" />
-          </figure>
-        </div>
           <div class="card-wrapper">
-          <div class="card">
-            <h2 id="ecology">ECOLOGY</h2>
-            <div class="ecology background">  
-              <p>
-                As we learn more and more of the impact humans are having on the
-                planet, the more important it becomes that scientists explore
-                how to create a sustainable future not just for humans but for
-                the whole planet.
-              </p>
+            <div class="card reverse">
+              <h2 id="robotics">ROBOTICS & AI</h2>
+              <div class="robotics background">
+                <p>
+                  The information revolution is here and robotics and artificial
+                  intelligence are the science of the future.
+                </p>
+                <p>
+                  From useful home applications of AI to industrial uses of
+                  robotics, the future is here. You can even say hello and shake
+                  the hand of Rob the Robot.
+                </p>
               </div>
+            </div>
+            <span class="fa fa-arrow-circle-left orange reverse"></span>
+            <span class="fa fa-arrow-circle-down orange"></span>
+            <figure class="card">
+              <img src="images\robotics.jpg" alt="" />
+            </figure>
+            <figure class="card-large reverse">
+              <img src="images\robotics_large.jpg" alt="" />
+            </figure>
           </div>
-          <span class="fa fa-arrow-circle-right magenta"></span>
-          <span class="fa fa-arrow-circle-down magenta"></span>
-          <figure class="card"><img src="images\ecology.jpg" alt="" /></figure>
-          <figure class="card-large">
-            <img src="images\ecology_large.jpg" alt="" />
-          </figure>
-        </div>
+          <div class="card-wrapper">
+            <div class="card">
+              <h2 id="ecology">ECOLOGY</h2>
+              <div class="ecology background">
+                <p>
+                  As we learn more and more of the impact humans are having on
+                  the planet, the more important it becomes that scientists
+                  explore how to create a sustainable future not just for humans
+                  but for the whole planet.
+                </p>
+              </div>
+            </div>
+            <span class="fa fa-arrow-circle-right magenta"></span>
+            <span class="fa fa-arrow-circle-down magenta"></span>
+            <figure class="card">
+              <img src="images\ecology.jpg" alt="" />
+            </figure>
+            <figure class="card-large">
+              <img src="images\ecology_large.jpg" alt="" />
+            </figure>
+          </div>
         </section>
         <section class="photo-gallery">
           <h3>Come Visit Us and Continue Your Exploration</h3>
           <div class="image-wrapper">
-          <div><img src="../images/gallery-1.jpg" alt="" /></div>
-          <div><img src="../images/gallery-2.jpg" alt="" /></div>
-          <div><img src="../images/gallery-3.jpg" alt="" /></div>
-          <div><img src="../images/gallery-4.jpg" alt="" /></div>
-          <div><img src="../images/gallery-5.jpg" alt="" /></div>
-          <div><img src="../images/gallery-6.jpg" alt="" /></div>
-        </div>
-        <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
+            <div><img src="../images/gallery-1.jpg" alt="" /></div>
+            <div><img src="../images/gallery-2.jpg" alt="" /></div>
+            <div><img src="../images/gallery-3.jpg" alt="" /></div>
+            <div><img src="../images/gallery-4.jpg" alt="" /></div>
+            <div><img src="../images/gallery-5.jpg" alt="" /></div>
+            <div><img src="../images/gallery-6.jpg" alt="" /></div>
+          </div>
+          <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
         </section>
 
         <div class="newsletter-wrapper">
@@ -341,77 +345,78 @@
             </section>
           </div>
         </div>
-      </main>
-  
-      <footer>
-        <div class="footer-wrapper">
-          <div class="footer-container">
-            <h6>CONNECT:</h6>
-            <ul class="connect">
-              <li>
-                <a href="www.facebook.com"
-                  ><span class="fa fa-facebook-f"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.instagram.com"
-                  ><span class="fa fa-instagram"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-              </li>
-              <li>
-                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-              </li>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul class="connect">
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <div class="hours-wrapper">
+            <ul class="hours">
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
             </ul>
-          </div>
-          <div class="footer-container">
-            <h6>HOURS:</h6>
-            <div class="hours-wrapper">
-              <ul class="hours">
-                <li>Monday:</li>
-                <li>Tuesday:</li>
-                <li>Wednesday:</li>
-                <li>Thursday:</li>
-                <li>Friday:</li>
-                <li>Saturday:</li>
-                <li>Sunday:</li>
-              </ul>
-              <ul>
-                <li>Closed</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 19:00</li>
-                <li>09:00 - 16:00</li>
-                <li>09:00 - 13:00</li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-container">
-            <div>
-              <h6>LOCATION:</h6>
-              <p>Nygårdsgaten 112</p>
-              <p>5008 Bergen, Norway</p>
-            </div>
-            <a href="visit.html" class="location"
-              ><span class="fa fa-map-marker-alt"></span>
-              <p>Getting Here</p></a
-            >
-          </div>
-          <div class="footer-container">
-            <h6>CONTACT & SUPPORT:</h6>
-            <ul class="contact">
-              <li><a href="about_us.html">About Us</a></li>
-              <li><a href="visit.html">Facilities</a></li>
-              <li><a href="contact.html">Contact & FAQ</a></li>
-              <li><p>Email: contact@cms.com</p></li>
-              <li><p>Phone: 500 55 555</p></li>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
             </ul>
           </div>
         </div>
-        <p id="copyright">Community Science Museum 2020</p>
-      </footer>
+        <div class="footer-container">
+          <div>
+            <h6>LOCATION:</h6>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen, Norway</p>
+          </div>
+          <a href="visit.html" class="location"
+            ><span class="fa fa-map-marker-alt"></span>
+            <p>Getting Here</p></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul class="contact">
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
+            <li><p>Email: contact@cms.com</p></li>
+            <li><p>Phone: 500 55 555</p></li>
+          </ul>
+        </div>
+      </div>
+      <p id="copyright">Community Science Museum 2020</p>
+    </footer>
   </body>
 </html>
