--- a/explore.html
+++ b/explore.html
@@ -192,6 +192,7 @@
               Our exhibits are designed to be accessible for interested minds,
               so make sure you come ready to learn and explore.
             </p>
+            <p>You can also join one of our popular science clubs.</p>
           </div>
           <div class="margins" id="item-2">
             <h4>Join a Childrens Club</h4>
