--- a/visit.html
+++ b/visit.html
@@ -188,14 +188,20 @@
             </p>
             <p>
               If you would like to organise a guided tour for your group of 6 or
-              more people, please contact us to arrange the tour.
+              more people, please <a href="contact.html">contact</a> us to arrange the tour.
             </p>
             <p>
               Tickets may be bought through Our partnership with Ticketmaster,
               or at the site.
             </p>
+            <p>
+              If you want to book a place in a special event or join a childrens club, please <a href="contact.html">contact</a> us.
+            </p>
+            <p>
+              If you have any question, please read our <a href="contact.html">FAQ</a>, or send us a question using this <a href="contact.html">contact-form</a>
+            </p>
           </div>
-          <div class="info">
+          <div class="info" id="map">
             <h2>Location</h2>
             <p>The Museum is Located at:</p>
             <p id="street">Nygårdsgaten 112</p>
