updates to dropdown

--- a/about_us.html
+++ b/about_us.html
@@ -123,24 +123,35 @@
               >EXHIBITIONS</a
             >
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
+              <p class="header">
+                Our more than 1000 unique exhibitions are divided into 5 main
+                spaces for you to explore
+              </p>
+              <p>These spaces include:</p>
               <p>
                 Cosmology, Evolution, Biology & Medicine, Robotics & AI and
                 Ecology
               </p>
-              <p>Learn More...</p>
+              <p>Click to Learn More...</p>
             </div>
           </li>
 
           <li>
             <a href="explore.html" class="purple-box inactive">EXPLORE</a>
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
+              <p class="header">
+                Here you can learn more about what we can offer, wheter you are:
               </p>
-              <p>Learn More...</p>
+              <p>
+                A kid or a parent of a kid who would like to join one of our
+                clubs.
+              </p>
+              <p>
+                A teacher who would like to bring your students for a guided
+                tour.
+              </p>
+              <p>Or a researcher who would like to join our team.</p>
+              <p>Click to Learn More...</p>
             </div>
           </li>
 
@@ -149,24 +160,24 @@
               >GET INVOLVED</a
             >
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
+              <p class="header">
+                In order for us to create the best museum possible we need your
+                contribution.
               </p>
-              <p>Learn More...</p>
+              <p>
+                You can support our museum through donations, volunteering and
+                intenships.
+              </p>
+              <p>Click to learn more...</p>
             </div>
           </li>
 
           <li>
             <a href="visit.html" class="purple-box inactive">VISIT</a>
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
-              </p>
-              <p>Learn More...</p>
+              <p class="header">All you need to know about:</p>
+              <p>Admission, location, opening hours and our facilities.</p>
+              <p>Click to learn more...</p>
             </div>
           </li>
         </ul>
