--- a/visit.html
+++ b/visit.html
@@ -123,24 +123,35 @@
               >EXHIBITIONS</a
             >
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
+              <p class="header">
+                Our more than 1000 unique exhibitions are divided into 5 main
+                spaces for you to explore
+              </p>
+              <p>These spaces include:</p>
               <p>
                 Cosmology, Evolution, Biology & Medicine, Robotics & AI and
                 Ecology
               </p>
-              <p>Learn More...</p>
+              <p>Click to Learn More...</p>
             </div>
           </li>
 
           <li>
             <a href="explore.html" class="purple-box inactive">EXPLORE</a>
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
+              <p class="header">
+                Here you can learn more about what we can offer, wheter you are:
               </p>
-              <p>Learn More...</p>
+              <p>
+                A kid or a parent of a kid who would like to join one of our
+                clubs.
+              </p>
+              <p>
+                A teacher who would like to bring your students for a guided
+                tour.
+              </p>
+              <p>Or a researcher who would like to join our team.</p>
+              <p>Click to Learn More...</p>
             </div>
           </li>
 
@@ -149,24 +160,24 @@
               >GET INVOLVED</a
             >
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
+              <p class="header">
+                In order for us to create the best museum possible we need your
+                contribution.
               </p>
-              <p>Learn More...</p>
+              <p>
+                You can support our museum through donations, volunteering and
+                intenships.
+              </p>
+              <p>Click to learn more...</p>
             </div>
           </li>
 
           <li>
             <a href="visit.html" class="purple-box">VISIT</a>
             <div class="dropdown-info">
-              <p class="header">Our Exhibition Spaces Include:</p>
-              <p>
-                Cosmology, Evolution, Biology & Medicine, Robotics & AI and
-                Ecology
-              </p>
-              <p>Learn More...</p>
+              <p class="header">All you need to know about:</p>
+              <p>Admission, location, opening hours and our facilities.</p>
+              <p>Click to learn more...</p>
             </div>
           </li>
         </ul>
@@ -176,29 +187,35 @@
     <main>
       <div class="main-wrapper">
         <h1 class="mobile">Visit</h1>
-        <h1 class="large-screen">You will find us right in the center of Bergen</h1>
+        <h1 class="large-screen">
+          You will find us right in the center of Bergen
+        </h1>
         <section class="info">
           <div class="info">
             <h2>Admission</h2>
             <p><strong>The entrance is free for all.</strong></p>
             <p>
               There are guided tours of the museum that leave every hour. These
-              tours are <em>70 NOK per person</em> and include a handy printed guide of
-              the museum.
+              tours are <em>70 NOK per person</em> and include a handy printed
+              guide of the museum.
             </p>
             <p>
               If you would like to organise a guided tour for your group of 6 or
-              more people, please <a href="contact.html">contact</a> us to arrange the tour.
+              more people, please <a href="contact.html">contact</a> us to
+              arrange the tour.
             </p>
             <p>
               Tickets may be bought through Our partnership with Ticketmaster,
               or at the site.
             </p>
             <p>
-              If you want to book a place in a special event or join a childrens club, please <a href="contact.html">contact</a> us.
+              If you want to book a place in a special event or join a childrens
+              club, please <a href="contact.html">contact</a> us.
             </p>
             <p>
-              If you have any question, please read our <a href="contact.html">FAQ</a>, or send us a question using this <a href="contact.html">contact-form</a>
+              If you have any question, please read our
+              <a href="contact.html">FAQ</a>, or send us a question using this
+              <a href="contact.html">contact-form</a>
             </p>
           </div>
           <div class="info" id="map">
@@ -296,77 +313,78 @@
             </section>
           </div>
         </div>
-      </main>
-  
-      <footer>
-        <div class="footer-wrapper">
-          <div class="footer-container">
-            <h6>CONNECT:</h6>
-            <ul class="connect">
-              <li>
-                <a href="www.facebook.com"
-                  ><span class="fa fa-facebook-f"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.instagram.com"
-                  ><span class="fa fa-instagram"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-              </li>
-              <li>
-                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-              </li>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container">
+          <h6>CONNECT:</h6>
+          <ul class="connect">
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container">
+          <h6>HOURS:</h6>
+          <div class="hours-wrapper">
+            <ul class="hours">
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
             </ul>
-          </div>
-          <div class="footer-container">
-            <h6>HOURS:</h6>
-            <div class="hours-wrapper">
-              <ul class="hours">
-                <li>Monday:</li>
-                <li>Tuesday:</li>
-                <li>Wednesday:</li>
-                <li>Thursday:</li>
-                <li>Friday:</li>
-                <li>Saturday:</li>
-                <li>Sunday:</li>
-              </ul>
-              <ul>
-                <li>Closed</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 19:00</li>
-                <li>09:00 - 16:00</li>
-                <li>09:00 - 13:00</li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-container">
-            <div>
-              <h6>LOCATION:</h6>
-              <p>Nygårdsgaten 112</p>
-              <p>5008 Bergen, Norway</p>
-            </div>
-            <a href="visit.html" class="location"
-              ><span class="fa fa-map-marker-alt"></span>
-              <p>Getting Here</p></a
-            >
-          </div>
-          <div class="footer-container">
-            <h6>CONTACT & SUPPORT:</h6>
-            <ul class="contact">
-              <li><a href="about_us.html">About Us</a></li>
-              <li><a href="visit.html">Facilities</a></li>
-              <li><a href="contact.html">Contact & FAQ</a></li>
-              <li><p>Email: contact@cms.com</p></li>
-              <li><p>Phone: 500 55 555</p></li>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
             </ul>
           </div>
         </div>
-        <p id="copyright">Community Science Museum 2020</p>
-      </footer>
+        <div class="footer-container">
+          <div>
+            <h6>LOCATION:</h6>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen, Norway</p>
+          </div>
+          <a href="visit.html" class="location"
+            ><span class="fa fa-map-marker-alt"></span>
+            <p>Getting Here</p></a
+          >
+        </div>
+        <div class="footer-container">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul class="contact">
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
+            <li><p>Email: contact@cms.com</p></li>
+            <li><p>Phone: 500 55 555</p></li>
+          </ul>
+        </div>
+      </div>
+      <p id="copyright">Community Science Museum 2020</p>
+    </footer>
   </body>
 </html>
