--- a/exhibitions.html
+++ b/exhibitions.html
@@ -322,12 +322,12 @@
         <section class="photo-gallery">
           <h3>Come Visit Us and Continue Your Exploration</h3>
           <div class="image-wrapper">
-            <div><img src="../images/gallery-1.jpg" alt="" /></div>
-            <div><img src="../images/gallery-2.jpg" alt="" /></div>
-            <div><img src="../images/gallery-3.jpg" alt="" /></div>
-            <div><img src="../images/gallery-4.jpg" alt="" /></div>
-            <div><img src="../images/gallery-5.jpg" alt="" /></div>
-            <div><img src="../images/gallery-6.jpg" alt="" /></div>
+            <figure><img src="../images/gallery-1.jpg" alt="" /></figure>
+            <figure><img src="../images/gallery-2.jpg" alt="" /></figure>
+            <figure><img src="../images/gallery-3.jpg" alt="" /></figure>
+            <figure><img src="../images/gallery-4.jpg" alt="" /></figure>
+            <figure><img src="../images/gallery-5.jpg" alt="" /></figure>
+            <figure><img src="../images/gallery-6.jpg" alt="" /></figure>
           </div>
           <p class="visit">"More Than 1000 Unique Exhibits to Explore"</p>
         </section>
