Updates to header and footer

--- a/exhibitions.html
+++ b/exhibitions.html
@@ -361,7 +361,7 @@
 
     <footer>
       <div class="footer-wrapper">
-        <div class="footer-container">
+        <div class="footer-container fi1">
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
@@ -382,7 +382,7 @@
             </li>
           </ul>
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi2">
           <h6>HOURS:</h6>
           <div class="hours-wrapper">
             <ul class="hours">
@@ -405,7 +405,7 @@
             </ul>
           </div>
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi3">
           <div>
             <h6>LOCATION:</h6>
             <p>Nygårdsgaten 112</p>
@@ -416,7 +416,7 @@
             <p>Getting Here</p></a
           >
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi4">
           <h6>CONTACT & SUPPORT:</h6>
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
