--- a/contact.html
+++ b/contact.html
@@ -119,9 +119,7 @@
         </ul>
         <ul class="large-screen">
           <li>
-            <a href="exhibitions.html" class="purple-box inactive"
-              >EXHIBITIONS</a
-            >
+            <a href="exhibitions.html" class="purple-box">EXHIBITIONS</a>
             <div class="dropdown-info">
               <p class="header">
                 Our more than 1000 unique exhibitions are divided into 5 main
@@ -320,7 +318,7 @@ Write your message...</textarea
 
     <footer>
       <div class="footer-wrapper">
-        <div class="footer-container">
+        <div class="footer-container fi1">
           <h6>CONNECT:</h6>
           <ul class="connect">
             <li>
@@ -341,7 +339,7 @@ Write your message...</textarea
             </li>
           </ul>
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi2">
           <h6>HOURS:</h6>
           <div class="hours-wrapper">
             <ul class="hours">
@@ -364,7 +362,7 @@ Write your message...</textarea
             </ul>
           </div>
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi3">
           <div>
             <h6>LOCATION:</h6>
             <p>Nygårdsgaten 112</p>
@@ -375,7 +373,7 @@ Write your message...</textarea
             <p>Getting Here</p></a
           >
         </div>
-        <div class="footer-container">
+        <div class="footer-container fi4">
           <h6>CONTACT & SUPPORT:</h6>
           <ul class="contact">
             <li><a href="about_us.html">About Us</a></li>
