--- a/get_involved.html
+++ b/get_involved.html
@@ -158,9 +158,7 @@
           </li>
 
           <li>
-            <a href="get_involved.html" class="purple-box"
-              >GET INVOLVED</a
-            >
+            <a href="get_involved.html" class="purple-box">GET INVOLVED</a>
             <div class="dropdown-info">
               <p class="header">
                 In order for us to create the best museum possible we need your
@@ -262,77 +260,78 @@
             </section>
           </div>
         </div>
-      </main>
-  
-      <footer>
-        <div class="footer-wrapper">
-          <div class="footer-container">
-            <h6>CONNECT:</h6>
-            <ul class="connect">
-              <li>
-                <a href="www.facebook.com"
-                  ><span class="fa fa-facebook-f"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.instagram.com"
-                  ><span class="fa fa-instagram"></span
-                ></a>
-              </li>
-              <li>
-                <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
-              </li>
-              <li>
-                <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
-              </li>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-wrapper">
+        <div class="footer-container fi1">
+          <h6>CONNECT:</h6>
+          <ul class="connect">
+            <li>
+              <a href="www.facebook.com"
+                ><span class="fa fa-facebook-f"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.instagram.com"
+                ><span class="fa fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a href="www.youtube.com"><span class="fa fa-youtube"></span></a>
+            </li>
+            <li>
+              <a href="www.twitter.com"><span class="fa fa-twitter"></span></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-container fi2">
+          <h6>HOURS:</h6>
+          <div class="hours-wrapper">
+            <ul class="hours">
+              <li>Monday:</li>
+              <li>Tuesday:</li>
+              <li>Wednesday:</li>
+              <li>Thursday:</li>
+              <li>Friday:</li>
+              <li>Saturday:</li>
+              <li>Sunday:</li>
             </ul>
-          </div>
-          <div class="footer-container">
-            <h6>HOURS:</h6>
-            <div class="hours-wrapper">
-              <ul class="hours">
-                <li>Monday:</li>
-                <li>Tuesday:</li>
-                <li>Wednesday:</li>
-                <li>Thursday:</li>
-                <li>Friday:</li>
-                <li>Saturday:</li>
-                <li>Sunday:</li>
-              </ul>
-              <ul>
-                <li>Closed</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 16:00</li>
-                <li>10:00 - 19:00</li>
-                <li>09:00 - 16:00</li>
-                <li>09:00 - 13:00</li>
-              </ul>
-            </div>
-          </div>
-          <div class="footer-container">
-            <div>
-              <h6>LOCATION:</h6>
-              <p>Nygårdsgaten 112</p>
-              <p>5008 Bergen, Norway</p>
-            </div>
-            <a href="visit.html" class="location"
-              ><span class="fa fa-map-marker-alt"></span>
-              <p>Getting Here</p></a
-            >
-          </div>
-          <div class="footer-container">
-            <h6>CONTACT & SUPPORT:</h6>
-            <ul class="contact">
-              <li><a href="about_us.html">About Us</a></li>
-              <li><a href="visit.html">Facilities</a></li>
-              <li><a href="contact.html">Contact & FAQ</a></li>
-              <li><p>Email: contact@cms.com</p></li>
-              <li><p>Phone: 500 55 555</p></li>
+            <ul>
+              <li>Closed</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 16:00</li>
+              <li>10:00 - 19:00</li>
+              <li>09:00 - 16:00</li>
+              <li>09:00 - 13:00</li>
             </ul>
           </div>
         </div>
-        <p id="copyright">Community Science Museum 2020</p>
-      </footer>
+        <div class="footer-container fi3">
+          <div>
+            <h6>LOCATION:</h6>
+            <p>Nygårdsgaten 112</p>
+            <p>5008 Bergen, Norway</p>
+          </div>
+          <a href="visit.html" class="location"
+            ><span class="fa fa-map-marker-alt"></span>
+            <p>Getting Here</p></a
+          >
+        </div>
+        <div class="footer-container fi4">
+          <h6>CONTACT & SUPPORT:</h6>
+          <ul class="contact">
+            <li><a href="about_us.html">About Us</a></li>
+            <li><a href="visit.html">Facilities</a></li>
+            <li><a href="contact.html">Contact & FAQ</a></li>
+            <li><p>Email: contact@cms.com</p></li>
+            <li><p>Phone: 500 55 555</p></li>
+          </ul>
+        </div>
+      </div>
+      <p id="copyright">Community Science Museum 2020</p>
+    </footer>
   </body>
 </html>
