responsivness added to explore page

--- a/explore.html
+++ b/explore.html
@@ -224,9 +224,9 @@
               and how you can join, send us a message.
             </p>
           </div>
-          <figure class="margins" id="item-3">
+          <div class="margins" id="item-3">
             <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
-          </figure>
+          </div>
         </section>
         <div class="margins get-in-touch">
           <p>Want to join one of our clubs?</p>
